# serializer version: 1
# name: TestSoftDTWSequenceMetric.test_call_equivalence_with_snapshot[event]
  -0.0074251609589266465
# ---
# name: TestSoftDTWSequenceMetric.test_call_equivalence_with_snapshot[interval]
  2.1941386953972692
# ---
# name: TestSoftDTWSequenceMetric.test_call_equivalence_with_snapshot[state]
  1.0798590205614353
# ---
